refactor(ci): remove redundant workflow files and update PMD rules.